# donghua_downloader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  docker_run.sh  downloader.py  pyproject.toml  rss_qbittorrent.py  tvdb_naming.py
web_gui/: __init__.py  app.py
web_gui/static/: style.css
web_gui/templates/: index.html
